// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateListingContainer Container test should match snapshot test if the user is a business 1`] = `
<div>
  <div
    className="sideBar-container grid-cols-8"
  >
    <div
      className="sideBar col-end-3"
    >
      <div>
        <div
          className="page-title mx-4 my-5"
        >
          Create Listing
        </div>
        <section
          className="m-4"
        >
          <label
            className="label text-lg"
          >
            Select Type of Listing
          </label>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                checked={false}
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={false}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Home Sharing Services"
              />
              Home Sharing Services
            </label>
          </span>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={false}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Local Classifieds"
              />
              Local Classifieds
            </label>
          </span>
        </section>
      </div>
    </div>
    <div
      className="sideBar-selected-component col-start-3 col-end-10"
    >
      <div
        className="flex justify-center items-center h-64 bg-white"
      >
        <div
          className="bg-white rounded-lg shadow-2xl"
        >
          <div
            className="flex w-96 rounded-lg border-t-8 border-green-600"
          >
            <div
              className="p-10 mx-auto w-full"
            >
              <h1
                className="text-gray-800 h1"
              >
                Please Select a Listing Type & Category
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateListingContainer Container test should match snapshot test if the user is a member 1`] = `
<div>
  <div
    className="sideBar-container grid-cols-8"
  >
    <div
      className="sideBar col-end-3"
    >
      <div>
        <div
          className="page-title mx-4 my-5"
        >
          Create Listing
        </div>
        <section
          className="m-4"
        >
          <label
            className="label text-lg"
          >
            Select Type of Listing
          </label>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                checked={true}
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={true}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Home Sharing Services"
              />
              Home Sharing Services
            </label>
          </span>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={true}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Local Classifieds"
              />
              Local Classifieds
            </label>
          </span>
        </section>
        <section
          className="m-4"
        >
          <label
            className="label text-lg"
          >
            Select Listing Category
          </label>
          <div>
            <div
              className=" css-14jk2my-container"
              onKeyDown={[Function]}
            >
              <div
                className=" css-1fc64l6-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className=" css-g1d714-ValueContainer"
                >
                  <div
                    className=" css-107lb6w-singleValue"
                  >
                    Members with Homes to Share
                  </div>
                  <div
                    className="css-b8ldur-Input"
                  >
                    <div
                      className=""
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={true}
                        id="react-select-2-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >

                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className=" css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className=" css-109onse-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className=" css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-6q0nyr-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      className="sideBar-selected-component col-start-3 col-end-10"
    >
      <div
        className="flex justify-center items-center h-64 bg-white"
      >
        <div
          className="bg-white rounded-lg shadow-2xl"
        >
          <div
            className="flex w-96 rounded-lg border-t-8 border-green-600"
          >
            <div
              className="p-10 mx-auto w-full"
            >
              <h1
                className="text-gray-800 h1"
              >
                Please Select a Listing Type & Category
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreateListingContainer Container test should match snapshot test if the user is not logged in 1`] = `
<div>
  <div
    className="sideBar-container grid-cols-8"
  >
    <div
      className="sideBar col-end-3"
    >
      <div>
        <div
          className="page-title mx-4 my-5"
        >
          Create Listing
        </div>
        <section
          className="m-4"
        >
          <label
            className="label text-lg"
          >
            Select Type of Listing
          </label>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                checked={false}
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={false}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Home Sharing Services"
              />
              Home Sharing Services
            </label>
          </span>
          <span
            className="block"
          >
            <label
              className="text-base text-gray-700 pr-8"
            >
              <input
                className="form-radio mt-2 ml-2 mr-1 pb-4"
                disabled={false}
                name="listingType"
                onChange={[Function]}
                type="radio"
                value="Local Classifieds"
              />
              Local Classifieds
            </label>
          </span>
        </section>
      </div>
    </div>
    <div
      className="sideBar-selected-component col-start-3 col-end-10"
    >
      <div
        className="flex justify-center items-center h-64 bg-white"
      >
        <div
          className="bg-white rounded-lg shadow-2xl"
        >
          <div
            className="flex w-96 rounded-lg border-t-8 border-green-600"
          >
            <div
              className="p-10 mx-auto w-full"
            >
              <h1
                className="text-gray-800 h1"
              >
                Please Select a Listing Type & Category
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;